--- a/tests/visual_tests/add_header_above_html.Rmd
+++ b/tests/visual_tests/add_header_above_html.Rmd
@@ -1,6 +1,8 @@
 ---
 title: "add_header_above"
 output: html_document
+editor_options: 
+  chunk_output_type: console
 ---
 
 # Test table 1
@@ -27,3 +29,7 @@ kable(dt, format = "html") %>%
   add_header_above(c(" ", "c" = 3, "d" = 1)) %>%
   column_spec(1, "1in")
 ```
+
+
+
+
