--- a/docs/best_practice_for_newline_in_latex_table.Rmd
+++ b/docs/best_practice_for_newline_in_latex_table.Rmd
@@ -47,7 +47,7 @@ dt2 %>%
         col.names = linebreak(c("Item\n(Name)", "Value\n(Number)"), align = "c"))
 ```
 
-### Linebreak in kableExtra functions
+### Linebreak in other kableExtra functions
 If you have a need to put a linebreak in `kableExtra` functions such as `add_header_above` and `group_rows`, just go ahead and use `\n` and it will be automatically converted. Note that this feature is controlled by the `escape` option in those functions. 
 
 ```{r}
@@ -55,7 +55,7 @@ dt2 %>%
   mutate_all(linebreak) %>%
   kable("latex", booktabs = T, escape = F,
         col.names = linebreak(c("Item\n(Name)", "Value\n(Number)"), align = "c")) %>%
-  add_header_above(c("Combined\nTitle" = 2))
-
+  add_header_above(c("Combined\nTitle" = 2)) %>%
+  group_rows("Group\n1", 2, 2)
 ```
 
